data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3394.wast
;; 3. **Test Description**: Implement a recursive function that triggers a loop with a `br_if` that depends on a base case condition check inside the function. The base case should eventually terminate the loop.    - **Constraint**: Ensuring proper stack management and base case check for recursion during function calls.    - **Infinite Loop Relation**: If recursion or base case handling fails, the loop may invoke the function indefinitely leading to infinite recursion.

(assert_invalid
  (module
    (func $recursive (param i32) (result i32)
      local.get 0
      i32.const 1
      i32.sub
      local.tee 0
      br_if 0
      call 0
    )
  )
  "unknown function"
)